# mipt-projects

akinator/: CMakeLists.txt  btree.c  btree.h  interface.c  speaker.c  speaker.h  test.c  tokener.c  tokener.h  utils.c  utils.h
btree/: CMakeLists.txt  btree.c  btree.h  test.c  tokener.c  tokener.h
diff/: CMakeLists.txt  btree.c  btree.h  errors.h  lexer.c  lexer.h  operations.c  operations.h  operations.h.gen  parser.c  parser.h  syntaxError.c  syntaxError.h
ex/: CMakeLists.txt  main.cpp
hack/: CRACKME.COM  README.md
hack/keygen/: Makefile  main.c
list/: CMakeLists.txt  clist.c  clist.h  config.h  list.c  list.h  test.c
log/: CMakeLists.txt  colors.h  hsv2rgb.c  hsv2rgb.h  log.c  log.h
mandelbrot/: CMakeLists.txt  benchmark.c  benchmark.h  camera.c  camera.h  fps.c  fps.h  main.c  mandelbrot.c  mandelbrot.h  palette.c  palette.h  pallete.c  pallete.h
oip/: 2-1.py  2-2.py  2-3.py  4-1-dac.py  4-2-triangle.py  4-3-pwm.py  5-1-adc.py  5-2-adc-sar.py  5-3-adc-volume.py  7-1.py  data.txt  settings.txt
onegin/: CMakeCache.txt  CMakeLists.txt  files.c  files.h  input.txt  main.c  out.txt  sort.c  sort.h  text.txt  utils.c  utils.h
printf/: Makefile  main.c  printf.asm
sqr/: CMakeLists.txt  io.cpp  io.h  main.cpp  solver.cpp  solver.h  test.cpp  test.h  tests.txt  utils.cpp  utils.h  version.h
stack/: CMakeLists.txt  config.h  gassert.h  log.c  log.h  main.c  murmurhash.c  murmurhash.h  murmurhsash.h  stack.c  stack.h
stack/log/: CMakeLists.txt
stdstr/: main.cpp  mystring.cpp
string/: CMakeLists.txt  mystring.h
tester/: CMakeLists.txt  main.cpp  processRunner.cpp  processRunner.h  signalHandler.cpp  signalHandler.h
vm/: CMakeLists.txt  badapplegen.c  circle.ys  fib.ys  quadra.ys  test.ys
vm/asm/: asm.c  asm.h  labels.c  labels.h  main.c
vm/common/: colors.h  commands.c  commands.gen.h  commands.h  header.c  header.h  instruction.c  instruction.h  registers.c  registers.h  text.c  text.h  utils.c  utils.h  version.c  version.h
vm/disasm/: disasm.c  disasm.h  main.c
vm/proc/: graphics.c  graphics.h  instructions.c  main.c  operations.c  processor.c  processor.h
